--- a/src/app/users/user-reset-password/user-reset-password.component.html
+++ b/src/app/users/user-reset-password/user-reset-password.component.html
@@ -1,42 +1,58 @@
-<div class="register-form">
-
-  <mat-form-field appearance="fill">
-    <mat-label>Enter your current password</mat-label>
-    <input matInput type="password" [formControl]="currentPassword" required> <!-- [errorStateMatcher]="matcher" -->
-    <mat-error *ngIf="currentPassword.hasError('pattern') && !currentPassword.hasError('required')">
-      Please enter a valid password
-    </mat-error>
-    <mat-error *ngIf="currentPassword.hasError('required')">
-      Password is <strong>required</strong>
-    </mat-error>
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Enter your new password</mat-label>
-    <input matInput type="password" [formControl]="newPassword" required> <!-- [errorStateMatcher]="matcher" -->
-    <mat-error *ngIf="newPassword.hasError('pattern') && !newPassword.hasError('required')">
-      Please enter a valid password
-    </mat-error>
-    <mat-error *ngIf="newPassword.hasError('required')">
-      Password is <strong>required</strong>
-    </mat-error>
-  </mat-form-field>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Confirm your new password</mat-label>
-    <input matInput type="password" [formControl]="confirmPassword" required> <!-- [errorStateMatcher]="matcher" -->
-    <mat-error *ngIf="!equalsPasswords() && !confirmPassword.hasError('required')">
-      Entered passwords are not equals
-    </mat-error>
-    <mat-error *ngIf="confirmPassword.hasError('required')">
-      Password is <strong>required</strong>
-    </mat-error>
-  </mat-form-field>
-
-  <div class="form-group">
-    <button mat-raised-button color="accent" (click)="onSubmit()">Save password</button>
-    <div *ngIf="isSignUpFailed" class="alert alert-warning">
-      Signup failed!<br/>{{errorMessage}}
+<div id="cms">
+  <mat-dialog-content>
+    <div class="container container-fluid">
+      <div class="row header">
+        <div class="col-md-12 text-center align-content-center">
+          <h1 class="section-heading text-center">Reset password</h1>
+          <hr class="primary">
+        </div>
+      </div>
+      <div class="row password-content">
+        <div class="col-md-12 my-auto text-center">
+          <div class="row">
+            <span class="col-md-6 my-auto text-right">Enter your current password: </span>
+            <mat-form-field class="col-md-6 element">
+              <input matInput type="password" [formControl]="currentPassword" required>
+              <mat-error *ngIf="currentPassword.hasError('pattern') && !currentPassword.hasError('required')">
+                Please enter a valid password
+              </mat-error>
+              <mat-error *ngIf="currentPassword.hasError('required')">
+                Password is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <span class="col-md-6 my-auto text-right">Choose new password: </span>
+            <mat-form-field class="col-md-6 element">
+              <input matInput type="password" [formControl]="newPassword" required> <!-- [errorStateMatcher]="matcher" -->
+              <mat-error *ngIf="newPassword.hasError('pattern') && !newPassword.hasError('required')">
+                Please enter a valid password
+              </mat-error>
+              <mat-error *ngIf="newPassword.hasError('required')">
+                Password is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="row">
+            <span class="col-md-6 my-auto text-right">Confirm new password: </span>
+            <mat-form-field class="col-md-6 element">
+              <input matInput type="password" [formControl]="confirmPassword" required> <!-- [errorStateMatcher]="matcher" -->
+              <mat-error *ngIf="!equalsPasswords() && !confirmPassword.hasError('required')">
+                Entered passwords are not equals
+              </mat-error>
+              <mat-error *ngIf="confirmPassword.hasError('required')">
+                Password is <strong>required</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </mat-dialog-content>
+  <mat-dialog-actions>
+    <div class="buttons-section">
+      <button mat-raised-button class="action-button" color="accent" (click)="onSubmit()" tabindex="1">Change password</button>
+      <button mat-raised-button class="action-button" mat-dialog-close tabindex="-1">Cancel</button>
+    </div>
+  </mat-dialog-actions>
 </div>
