--- a/src/app/books/books-add-modify/books-add-modify.component.html
+++ b/src/app/books/books-add-modify/books-add-modify.component.html
@@ -1,57 +1,88 @@
-<p>books-add-modify works!</p>
-
-<!--(ngSubmit)="onSubmit()" (cancel)="cancel()"-->
-<form [formGroup]="form" class="register-form" >
-
-  <mat-form-field appearance="fill">
-    <mat-label>Choose title</mat-label>
-    <input matInput type="text" formControlName="title" required > <!-- [errorStateMatcher]="matcher" -->
-    <mat-error *ngIf="this.form.get('title').hasError('required')">
-      Title is <strong>required</strong>
-    </mat-error>
-  </mat-form-field> <br/>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Enter book's author</mat-label>
-    <input matInput type="text" formControlName="author" required> <!-- [errorStateMatcher]="matcher" -->
-    <mat-error *ngIf="this.form.get('author').hasError('required')">
-      Author is <strong>required</strong>
-    </mat-error>
-  </mat-form-field> <br/>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Enter book's description</mat-label>
-    <input matInput type="text" formControlName="description" required> <!-- [errorStateMatcher]="matcher" -->
-  </mat-form-field> <br/>
-
-  <mat-form-field appearance="fill">
-    <mat-label>Enter book isbn</mat-label>
-    <input matInput type="text" formControlName="isbn"> <!-- [errorStateMatcher]="matcher" -->
-    <mat-hint>Make it easier for other users to find the book</mat-hint>
-  </mat-form-field> <br/>
-
-  <mat-form-field appearance="fill">
-    <input type="text"
-           placeholder="Category"
-           aria-label="Number"
-           matInput
-           formControlName="category"
-           [matAutocomplete]="auto">
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-      <mat-option *ngFor="let option of filteredCategories | async" [value]="option">
-        {{option}}
-      </mat-option>
-    </mat-autocomplete>
-    <mat-error *ngIf="this.form.get('category').hasError('required')">
-      Category is <strong>required</strong>
-    </mat-error>
-  </mat-form-field> <br/>
-
-  <div class="form-group">
-    <button mat-raised-button color="accent" (click)="onSubmit()">{{submitButton}}</button>
-    <button mat-raised-button color="accent" (click)="cancel(); $event.stopPropagation()">Cancel</button>
-    <div *ngIf="isSavingFailed" class="alert alert-warning">
-      Saving failed!<br/>{{errorMessage}}
+<link rel="stylesheet" href="books-add-modify.component.css">
+<div id="cms">
+  <div class="container container-fluid">
+    <div class="row header">
+      <div class="col-md-12 text-center align-content-center">
+        <h1 class="section-heading text-center">modify  <strong>{{form.get('title')?.value}}</strong>  book</h1>
+        <hr class="primary">
+      </div>
     </div>
+    <mat-card>
+      <mat-card-content>
+        <div class="row edit-content">
+          <form [formGroup]="form" class="col-md-8 my-auto text-center">
+            <div class="row">
+              <span class="col-md-4 my-auto text-right">Book title: </span>
+              <mat-form-field class="col-md-8 element" *ngIf="viewMode == 'edit'">
+                <input matInput type="text" formControlName="title" readonly>
+              </mat-form-field>
+              <mat-form-field class="col-md-8 element" *ngIf="viewMode == 'add'">
+                <input matInput type="text" formControlName="title" required>
+                <mat-error *ngIf="this.form.get('title').hasError('required')">
+                  Title is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div class="row">
+              <span class="col-md-4 my-auto text-right">Book author: </span>
+              <mat-form-field class="col-md-8 element">
+                <input matInput type="text" formControlName="author" required>
+                <mat-error *ngIf="this.form.get('author').hasError('required')">
+                  Author is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div class="row">
+              <span class="col-md-4 my-auto text-right">Book description: </span>
+              <mat-form-field class="col-md-8 element">
+                <textarea matInput type="text"
+                          cdkTextareaAutosize
+                          formControlName="description"></textarea>
+              </mat-form-field>
+            </div>
+
+            <div class="row">
+              <span class="col-md-4 my-auto text-right">Book isbn: </span>
+              <mat-form-field class="col-md-8 element">
+                <input matInput type="text" formControlName="isbn">
+                <mat-hint>Make it easier for other users to find the book</mat-hint>
+              </mat-form-field>
+            </div>
+
+            <div class="row">
+              <span class="col-md-4 my-auto text-right">Book category: </span>
+              <mat-form-field class="col-md-8 element">
+                <input type="text"
+                       aria-label="Number"
+                       matInput
+                       formControlName="category"
+                       [matAutocomplete]="auto">
+                <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                  <mat-option *ngFor="let option of filteredCategories | async" [value]="option">
+                    {{option}}
+                  </mat-option>
+                </mat-autocomplete>
+                <mat-error *ngIf="this.form.get('category').hasError('required')">
+                  Category is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </div>
+            <div class="row submit-section">
+              <div class="col-md-12 my-auto text-right">
+                <button mat-raised-button class="action-button" color="accent" [disabled]="loading && !form.valid" (click)="onSubmit()">
+                  {{submitButton}}
+                </button>
+                <button mat-raised-button class="action-button" (click)="cancel()">Cancel</button>
+              </div>
+            </div>
+          </form>
+          <div class="col-xl-4 my-auto text-center">
+            <img src="assets/book-picture.png" alt="Book picture">
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
   </div>
-</form>
+</div>
