--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,41 +1,45 @@
+<div id="cms">
+  <div class="row">
+    <div class="col-md-12 text-center align-content-center">
+      <h1 class="section-heading text-center">Users belonging to the community</h1>
+      <hr class="primary">
+    </div>
+  </div>
+  <form *ngIf="dataSource.data.length !== 0" [formGroup]="searchForm" class="row">
+    <div class="col-md-9">
+      <mat-form-field class="col-md-3 mx-auto">
+        <mat-label>First name</mat-label>
+        <input matInput
+               type="text"
+               formControlName="firstName"
+               aria-label="First name"
+               (keyup)="applyFilter()"/>
+      </mat-form-field>
 
-<div>
-  <form [formGroup]="searchForm" class="search__form">
+      <mat-form-field class="col-md-3 mx-auto">
+        <mat-label>Username</mat-label>
+        <input matInput
+               type="text"
+               formControlName="username"
+               aria-label="Username"
+               (keyup)="applyFilter()"/>
+      </mat-form-field>
 
-    <mat-form-field class="search__form_field" appearance="outline">
-      <mat-label>First name</mat-label>
-      <input type="text"
-             aria-label="First name"
-             matInput
-             formControlName="firstName"
-             (keyup)="applyFilter()"
-      >
-    </mat-form-field>
-
-    <mat-form-field class="search__form_field" appearance="outline">
-      <mat-label>Username</mat-label>
-      <input type="text"
-             aria-label="Username"
-             matInput
-             formControlName="username"
-             (keyup)="applyFilter()"
-      >
-    </mat-form-field>
-
-    <mat-form-field class="search__form_field" appearance="outline">
-      <mat-label>City</mat-label>
-      <input type="text"
-             aria-label="City"
-             matInput
-             formControlName="city"
-             (keyup)="applyFilter()"
-      >
-    </mat-form-field>
+      <mat-form-field class="col-md-3 mx-auto">
+        <mat-label>City</mat-label>
+        <input matInput
+               type="text"
+               formControlName="city"
+               aria-label="City"
+               (keyup)="applyFilter()"/>
+      </mat-form-field>
+    </div>
   </form>
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" class="full-width-table" matSort aria-label="Elements">
+  <div *ngIf="dataSource.data.length !== 0" class="mat-elevation-z8 users-table">
 
+    <table mat-table [dataSource]="dataSource" matSort class="full-width-table table-hover" aria-label="Elements"
+           (matSortChange)="sortData($event)">
       <!-- firstName Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
@@ -69,14 +73,20 @@
       <ng-container matColumnDef="sendMessage">
         <th mat-header-cell *matHeaderCellDef > Send message </th>
         <td mat-cell *matCellDef="let element" >
-          <button mat-button (click)="sendMessage(element.username); $event.stopPropagation()">New message</button>
+          <button mat-raised-button class="action-button" color="accent"
+                  (click)="sendMessage(element.username); $event.stopPropagation()">
+            New message
+          </button>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="handOver">
         <th mat-header-cell *matHeaderCellDef > Select user </th>
         <td mat-cell *matCellDef="let element" >
-          <button mat-button (click)="handOverBook(element.username); $event.stopPropagation()">Select</button>
+          <button mat-raised-button class="action-button" color="accent"
+                  (click)="handOverBook(element.username); $event.stopPropagation()">
+            Select
+          </button>
         </td>
       </ng-container>
 
@@ -87,9 +97,14 @@
     <mat-paginator #paginator
         [length]="dataSource?.data.length"
         [pageIndex]="0"
-        [pageSize]="50"
+        [pageSize]="10"
         [pageSizeOptions]="[10, 25, 50]">
     </mat-paginator>
   </div>
-
+  <div class="row no-content" *ngIf="dataSource.data.length === 0">
+    <div class="col-md-12 my-auto text-center">
+      <img src="assets/no-content.jpeg" alt="No items fount">
+      <h2>No items found</h2>
+    </div>
+  </div>
 </div>
