--- a/src/app/books/books-add-modify/books-add-modify.component.html
+++ b/src/app/books/books-add-modify/books-add-modify.component.html
@@ -3,7 +3,8 @@
   <div class="container container-fluid">
     <div class="row header">
       <div class="col-md-12 text-center align-content-center">
-        <h1 class="section-heading text-center">modify  <strong>{{form.get('title')?.value}}</strong>  book</h1>
+        <h1 class="section-heading text-center" *ngIf="this.viewMode !== 'add'">modify  <strong>{{form.get('title')?.value}}</strong>  book</h1>
+        <h1 class="section-heading text-center" *ngIf="this.viewMode === 'add'">add new book</h1>
         <hr class="primary">
       </div>
     </div>
