--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -103,7 +103,7 @@
   </div>
   <div class="row no-content" *ngIf="dataSource.data.length === 0">
     <div class="col-md-12 my-auto text-center">
-      <img src="assets/no-content.jpeg" alt="No items fount">
+      <i class="material-icons" style="font-size: 150px"> search_off </i>
       <h2>No items found</h2>
     </div>
   </div>
