--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -38,7 +38,10 @@
         style="outline: none">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span routerLink="/" style="outline: none">BOOKCROSSING</span>
+      <span routerLink="/" style="outline: none">
+        <img src="assets/book-logo.png" alt="Book logo">
+        BOOKCROSSING
+      </span>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
