--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -40,7 +40,7 @@
               <!-- email -->
               <mat-form-field appearance="fill" style="width: 80%; padding-top: 10px">
                 <mat-label>Enter your email</mat-label>
-                <input matInput type="email" formControlName="email">
+                <input matInput type="email" formControlName="email" required>
                 <mat-error *ngIf="this.form.get('email').hasError('email') && !this.form.get('email').hasError('required')">
                   Please enter a valid email address
                 </mat-error>
