fix some small issues

--- a/src/app/account/login/login.component.css
+++ b/src/app/account/login/login.component.css
@@ -47,3 +47,7 @@ hr.primary {
   border-radius: 40px;
   box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
+
+.alert {
+  color: red;
+}
