--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -26,7 +26,7 @@
               </mat-form-field>
               <div class="form-group submit-button">
                 <button mat-raised-button color="accent" class="button-styles">LOGIN</button>
-                <div *ngIf="isLoginFailed" class="alert alert-danger">
+                <div *ngIf="isLoginFailed" class="alert">
                   Login failed: {{errorMessage}}
                 </div>
               </div>
