--- a/src/app/reports/reports-list/reports-list.component.html
+++ b/src/app/reports/reports-list/reports-list.component.html
@@ -64,7 +64,7 @@
         <!-- date Column -->
         <ng-container matColumnDef="date">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-          <td mat-cell *matCellDef="let element" class="table-content">{{element.date | date: 'yyyy/mm/dd'}}</td>
+          <td mat-cell *matCellDef="let element" class="table-content">{{element.date | date: 'yyyy/MM/dd'}}</td>
         </ng-container>
 
         <!-- date Column -->
